content and images updated

--- a/about-us.html
+++ b/about-us.html
@@ -271,7 +271,7 @@
         <!-- Team Section End -->
 
         <!-- Glimpse Section Start -->
-        <section class="glimpse">
+        <!-- <section class="glimpse">
             <div class="container-xxl">
                 <h2>A glimpse of our past</h2>
             </div>
@@ -287,40 +287,7 @@
                         <div class="swiper-slide" id="glimg-7"><img src="image/i7.png" alt=""></div>
                     </div>
                 </div>
-                <!-- <div class="gli-img-container">
-                    <div class="gli-img-box d-none d-lg-flex">
-                        <div class="glimg active" data-tra="700px" id="glimg-1"><img src="image/i1.png" class="w-100"
-                                alt=""></div>
-                        <div class="glimg" data-tra="400px" id="glimg-2"><img src="image/i2.png" class="w-100" alt="">
-                        </div>
-                        <div class="glimg" data-tra="100px" id="glimg-3"><img src="image/i3.png" class="w-100" alt="">
-                        </div>
-                        <div class="glimg" data-tra="-300px" id="glimg-4"><img src="image/i5.png" class="w-100" alt="">
-                        </div>
-                        <div class="glimg" data-tra="-600px" id="glimg-5"><img src="image/i7.png" class="w-100" alt="">
-                        </div>
-                        <div class="glimg" data-tra="-900px" id="glimg-6"><img src="image/i6.png" class="w-100" alt="">
-                        </div>
-                        <div class="glimg" data-tra="-1100px" id="glimg-7"><img src="image/i4.png" class="w-100" alt="">
-                        </div>
-                    </div>
-                    <div class="gli-img-box d-flex d-lg-none">
-                        <div class="glimg active" data-tra="480px" id="glimg-1"><img src="image/i1.png" class="w-100"
-                                alt=""></div>
-                        <div class="glimg" data-tra="200px" id="glimg-2"><img src="image/i2.png" class="w-100" alt="">
-                        </div>
-                        <div class="glimg" data-tra="0px" id="glimg-3"><img src="image/i3.png" class="w-100" alt="">
-                        </div>
-                        <div class="glimg" data-tra="-200px" id="glimg-4"><img src="image/i5.png" class="w-100" alt="">
-                        </div>
-                        <div class="glimg" data-tra="-400px" id="glimg-5"><img src="image/i7.png" class="w-100" alt="">
-                        </div>
-                        <div class="glimg" data-tra="-600px" id="glimg-6"><img src="image/i6.png" class="w-100" alt="">
-                        </div>
-                        <div class="glimg" data-tra="-800px" id="glimg-7"><img src="image/i4.png" class="w-100" alt="">
-                        </div>
-                    </div>
-                </div> -->
+               
                 <div class="row justify-content-center text-center">
                     <div class="col-sm-10 col-md-8 mt-4 mt-lg-5 glimg-text">
                         <p class="" data-gli-text="glimg-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non
@@ -350,15 +317,18 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- Glimpse Section End -->
 
 
         <!-- Partners Section Start -->
         <section class="partner">
-            <div class="container-xxl">
+            <div class="container-xxl text-center">
                 <h2>Partnerships We’ve Built</h2>
-                <div class="partner-slider">
+                <div class="row justify-content-center">
+                    <div class="col-lg-8 col-sm-10"><img src="image/partnerships.png" alt="" class="w-100"></div>
+                </div>
+                <!-- <div class="partner-slider">
                     <div class="par-box">
                         <div class="text-center">
                             <img src="image/partner-1.png" class="mx-auto" alt="">
@@ -432,7 +402,7 @@
                                 Dr. MPS Group of institute: Refreshed brand identity and boosted admissions.</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </section>
         <!-- Partners Section End -->
