--- a/celebrations-by-anjili-case-study.html
+++ b/celebrations-by-anjili-case-study.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="case-video mt-3">
-                <video src="image/case-study/mia/case-hero.mp4" class="w-100" autoplay loop muted> </video>
+                <video src="image/case-study/celebration/1.mp4" class="w-100" autoplay loop muted> </video>
             </div>
         </section>
         <!-- Case Study Hero Section End -->
@@ -125,14 +125,14 @@
         <!-- Case Study visual-identity Section End -->
 
         <!-- Case Study Extra Images Section Start -->
-        <!-- <section>
+        <section>
             <div class="row p-0">
-                <div class="col-12 p-0"><img src="image/case-study/swm/case-hero-2.jpg" alt="" class="w-100"></div>
-                <div class="col-md-4 p-0"><img src="image/case-study/swm/case-hero-3-s.jpg" alt="" class="w-100"></div>
-                <div class="col-md-4 p-0"><img src="image/case-study/swm/case-hero-3-m.jpg" alt="" class="w-100"></div>
-                <div class="col-md-4 p-0"><img src="image/case-study/swm/case-hero-3-e.jpg" alt="" class="w-100"></div>
+                <div class="col-12 p-0"><img src="image/case-study/celebration/CBA 1.jpg" alt="" class="w-100"></div>
+                <div class="col-md-4 p-0"><img src="image/case-study/celebration/CBA 2.jpg" alt="" class="w-100"></div>
+                <div class="col-md-4 p-0"><img src="image/case-study/celebration/CBA 3.jpg" alt="" class="w-100"></div>
+                <div class="col-md-4 p-0"><img src="image/case-study/celebration/CBA 4.jpg" alt="" class="w-100"></div>
             </div>
-        </section> -->
+        </section>
         <!-- Case Study Extra Images Section End -->
 
         <!-- Case Study Website Building Section Start -->
