--- a/mia-by-tanishq-case-study.html
+++ b/mia-by-tanishq-case-study.html
@@ -77,10 +77,15 @@
                     </div>
                     <div class="col-md-9">
                         <p>
-                            Mia by Tanishq aimed to increase foot traffic at their recently inaugurated Agra store while showcasing their latest collection.
+                            Mia by Tanishq aimed to increase foot traffic at their recently inaugurated Agra store while
+                            showcasing their latest collection.
                         </p>
                         <p>
-                            By leveraging the power of Influencer Marketing and targeted outreach, Mia by Tanishq captivated the hearts of Agra with the exquisite craftsmanship of its products. This strategic partnership not only amplified foot traffic at the store but also garnered an impressive 570,875 views and reached over 955,446 accounts, firmly establishing Mia by Tanishq's presence in the fashion jewellery industry.
+                            By leveraging the power of Influencer Marketing and targeted outreach, Mia by Tanishq
+                            captivated the hearts of Agra with the exquisite craftsmanship of its products. This
+                            strategic partnership not only amplified foot traffic at the store but also garnered an
+                            impressive 570,875 views and reached over 955,446 accounts, firmly establishing Mia by
+                            Tanishq's presence in the fashion jewellery industry.
                         </p>
                     </div>
                 </div>
@@ -89,7 +94,7 @@
         <!-- Case Study About Section End -->
 
         <!-- Case Study brand Section Start -->
-        <!-- <section class="case-brand">
+        <!-- <secti on class="case-brand">
             <div class="container-xxl">
                 <div class="row">
                     <div class="col-12 mb-3">
@@ -100,7 +105,7 @@
             <div class="">
                 <img src="image/case-study/swm/case-hero-1.png" alt="" class="w-100">
             </div>
-        </section> -->
+        </secti> -->
         <!-- Case Study brand Section End -->
         <!-- Case Study visual-identity Section Start -->
         <section class="case-visual-identity">
@@ -116,7 +121,8 @@
                         </div>
                     </div>
                     <div class="col-md-6 mt-3 mt-md-0">
-                        <p class="m-0">A total of 46,839 actions were taken which includes likes, comments, tap-links, saves, shares etc.</p>
+                        <p class="m-0">A total of 46,839 actions were taken which includes likes, comments, tap-links,
+                            saves, shares etc.</p>
                     </div>
                 </div>
             </div>
@@ -196,17 +202,25 @@
                     </div>
                     <div class="col-sm-6 mb-sm-3 d-flex justify-content-sm-end">
                         <div class="">
-                            <a href="#" class="text-decoration-underline"><p>Go Back to Project</p></a>
+                            <a href="#" class="text-decoration-underline">
+                                <p>Go Back to Project</p>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-12 p-0">
                         <div class="casp-slider">
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-1.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-2.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-3.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-1.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-2.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-3.jpg" alt="" class="w-100"></a></div>
+                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-1.jpg" alt=""
+                                        class="w-100"></a></div>
+                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-2.jpg" alt=""
+                                        class="w-100"></a></div>
+                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-3.jpg" alt=""
+                                        class="w-100"></a></div>
+                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-1.jpg" alt=""
+                                        class="w-100"></a></div>
+                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-2.jpg" alt=""
+                                        class="w-100"></a></div>
+                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-3.jpg" alt=""
+                                        class="w-100"></a></div>
                         </div>
                     </div>
                 </div>
@@ -245,7 +259,7 @@
     <!-- ========== main Js ========== -->
     <script src="js/main.js"></script>
     <script>
-        
+
     </script>
 </body>
 
