--- a/project.html
+++ b/project.html
@@ -138,7 +138,7 @@
                                         </p>
                                     </div>
                                     <div class="pro-btn">
-                                        <a href="#" class="th-arrow-btn">
+                                        <a href="celebrations-by-anjili-case-study.html" class="th-arrow-btn">
                                             <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                             <span class="btn-text">Learn More</span>
                                         </a>
