--- a/service.html
+++ b/service.html
@@ -63,7 +63,7 @@
                         <div class="ous-cont">
                             <div class="row justify-content-between">
                                 <div class="col-lg-5 mt-md-3 p-0">
-                                    <img src="image/our-sol-1.jpg" alt="" class="w-100">
+                                    <img src="image/our-sol-1.png" alt="" class="w-100">
                                 </div>
                                 <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
@@ -91,7 +91,7 @@
                         <div class="ous-cont">
                             <div class="row justify-content-between">
                                 <div class="col-lg-5 mt-md-3 p-0">
-                                    <img src="image/our-sol-1.jpg" alt="" class="w-100">
+                                    <img src="image/our-sol-2.png" alt="" class="w-100">
                                 </div>
                                 <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
@@ -119,7 +119,7 @@
                         <div class="ous-cont">
                             <div class="row justify-content-between">
                                 <div class="col-lg-5 mt-md-3 p-0">
-                                    <img src="image/our-sol-1.jpg" alt="" class="w-100">
+                                    <img src="image/our-sol-3.png" alt="" class="w-100">
                                 </div>
                                 <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
@@ -147,7 +147,7 @@
                         <div class="ous-cont">
                             <div class="row justify-content-between">
                                 <div class="col-lg-5 mt-md-3 p-0">
-                                    <img src="image/our-sol-1.jpg" alt="" class="w-100">
+                                    <img src="image/our-sol-4.png" alt="" class="w-100">
                                 </div>
                                 <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
@@ -175,7 +175,7 @@
                         <div class="ous-cont">
                             <div class="row justify-content-between">
                                 <div class="col-lg-5 mt-md-3 p-0">
-                                    <img src="image/our-sol-1.jpg" alt="" class="w-100">
+                                    <img src="image/our-sol-5.jpg" alt="" class="w-100">
                                 </div>
                                 <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
@@ -203,7 +203,7 @@
                         <div class="ous-cont">
                             <div class="row justify-content-between">
                                 <div class="col-lg-5 mt-md-3 p-0">
-                                    <img src="image/our-sol-1.jpg" alt="" class="w-100">
+                                    <img src="image/our-sol-6.png" alt="" class="w-100">
                                 </div>
                                 <div class="col-lg-6 mt-3 p-0">
                                     <div class="d-flex flex-column justify-content-between h-100">
