nav and service page fix

--- a/header.html
+++ b/header.html
@@ -21,7 +21,7 @@
                         <li class="nm-item">
                             <a href="contact-us.html" data-page="contact-page" class="th-btn d-inline-block d-lg-none">contact us</a>
                         </li>
-                        <div class="nm-circle"></div>
+                        <!-- <div class="nm-circle"></div> -->
                     </ul>
                 </div>
             </div>
