--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
                                 <div class="wow-box">
                                     <h2>One-off Project:</h2>
                                     <p>Delivery of a branding project, CGI project, marketing campaign,brand strategy & more</p>
-                                    <a href="#" class="th-arrow-btn">
+                                    <a href="https://calendly.com/yash-c43c" class="th-arrow-btn">
                                         <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                         <span class="btn-text"><b>Book a 30 mins call</b></span>
                                     </a>
@@ -642,7 +642,7 @@
                                 <div class="wow-box">
                                     <h2>Retained Support:</h2>
                                     <p>Instant consultations, monthly retained activities, social media management, reporting, and more</p>
-                                    <a href="#" class="th-arrow-btn">
+                                    <a href="https://calendly.com/yash-c43c" class="th-arrow-btn">
                                         <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                         <span class="btn-text"><b>Book a 30 mins call</b></span>
                                     </a>
