--- a/outreach-marketing-solution.html
+++ b/outreach-marketing-solution.html
@@ -94,7 +94,7 @@
                 </div>
                 <div class="whwedo-contianer">
                     <div class="row">
-                        <div class="col-sm-6 col-lg-3">
+                        <div class="col-sm-6 col-lg-4 col-xxl-3">
                             <div class="whwedo-box">
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
@@ -103,7 +103,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-3">
+                        <div class="col-sm-6 col-lg-4 col-xxl-3">
                             <div class="whwedo-box">
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
@@ -112,7 +112,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-3">
+                        <div class="col-sm-6 col-lg-4 col-xxl-3">
                             <div class="whwedo-box">
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
@@ -121,7 +121,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-3">
+                        <div class="col-sm-6 col-lg-4 col-xxl-3">
                             <div class="whwedo-box">
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
@@ -130,7 +130,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-3">
+                        <div class="col-sm-6 col-lg-4 col-xxl-3">
                             <div class="whwedo-box">
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
@@ -139,7 +139,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-3">
+                        <div class="col-sm-6 col-lg-4 col-xxl-3">
                             <div class="whwedo-box">
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
@@ -148,7 +148,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-3">
+                        <div class="col-sm-6 col-lg-4 col-xxl-3">
                             <div class="whwedo-box">
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
@@ -157,7 +157,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-3">
+                        <div class="col-sm-6 col-lg-4 col-xxl-3">
                             <div class="whwedo-box">
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
@@ -166,7 +166,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-3">
+                        <div class="col-sm-6 col-lg-4 col-xxl-3">
                             <div class="whwedo-box">
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
@@ -175,7 +175,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-3">
+                        <div class="col-sm-6 col-lg-4 col-xxl-3">
                             <div class="whwedo-box">
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
@@ -184,7 +184,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-3">
+                        <div class="col-sm-6 col-lg-4 col-xxl-3">
                             <div class="whwedo-box">
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
@@ -193,7 +193,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-3">
+                        <div class="col-sm-6 col-lg-4 col-xxl-3">
                             <div class="whwedo-box">
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
@@ -202,7 +202,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-3">
+                        <div class="col-sm-6 col-lg-4 col-xxl-3">
                             <div class="whwedo-box">
                                 <div class="whwedo-img"><img src="image/what-we-do-1.png" alt="" class="w-100"></div>
                                 <div class="whwedo-text">
