--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
             <div class="container-xxl p-0">
                 <div class="row">
                     <div class="col-md-7 hb-box">
-                        <div class="hb-left"><img src="image/hb-img.png" alt="" class="w-100"></div>
+                        <div class="hb-left">
+                            <!-- <img src="image/hb-img.png" alt="" class="w-100"> -->
+                             <video src="image/hb-img.mp4" autoplay loop muted class="w-100"></video>
+                        </div>
                     </div>
                     <div class="col-md-5 hb-box">
                         <div class="hb-right d-flex flex-column justify-content-between h-100">
