--- a/swm-case-study.html
+++ b/swm-case-study.html
@@ -154,7 +154,7 @@
                         </div>
                         <div class="col-6 p-0 d-flex justify-content-end">
                             <div class="casw-text-right">
-                                <a href="#" class="th-arrow-btn">
+                                <a href="https://spanishwithmrityunjay.in/" class="th-arrow-btn">
                                     <span class="btn-text">View Project</span>
                                     <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                 </a>
