--- a/mia-by-tanishq-case-study.html
+++ b/mia-by-tanishq-case-study.html
@@ -152,7 +152,7 @@
                         </div>
                         <div class="col-6 p-0 d-flex justify-content-end">
                             <div class="casw-text-right">
-                                <a href="#" class="th-arrow-btn">
+                                <a href="https://www.miabytanishq.com/" target="_blank" class="th-arrow-btn">
                                     <span class="btn-text">View Project</span>
                                     <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                 </a>
