case study content upload

--- a/gaupalam-vedic-case-study.html
+++ b/gaupalam-vedic-case-study.html
@@ -114,28 +114,18 @@
             </div>
         </section>
         <!-- Case Study brand Section End -->
-        <!-- Case Study visual-identity Section Start -->
-        <section class="case-visual-identity">
-            <div class="container-xxl">
-                <div class="row justify-content-between">
-                    <div class="col-sm-8 col-md-6 col-lg-4 d-flex gap-2 gap-md-4 align-items-center">
-                        <div class="cavi-img"><img src="image/main-arrow.png" alt=""></div>
-                        <div class="">
-                            <h4 class="m-0">
-                                Distinctive Visual
-                                <span class="red">Identity</span>
-                            </h4>
-                        </div>
-                    </div>
-                    <div class="col-md-6 mt-3 mt-md-0">
-                        <p class="m-0">From logo design to font choices, every element of our website's visual identity
-                            is meticulously crafted to maintain consistency with the 'Money Heist' brand, ensuring a
-                            cohesive and impactful user experience.</p>
-                    </div>
+        <section class="my-3">
+            <div class="casw-text-bottom">
+                <div class="container-xxl p-md-4">
+                    <h3 class="m-md-0">12,000+ leads generated</h3>
+                </div>
+            </div>
+            <div class="casw-text-bottom border-0">
+                <div class="container-xxl p-md-4">
+                    <h3 class="m-md-0">700+ leads generated monthly</h3>
                 </div>
             </div>
         </section>
-        <!-- Case Study visual-identity Section End -->
 
         <!-- Case Study Extra Images Section Start -->
         <section>
@@ -150,13 +140,13 @@
                     <img src="image/case-study/gaupalam-vedic/GV-4.jpg" alt="" class="w-100">
                 </div>
                 <div class="col-12 p-0">
+                    <img src="image/case-study/gaupalam-vedic/GV-7.jpg" alt="" class="w-100">
+                </div>
+                <div class="col-sm-6 p-0">
                     <img src="image/case-study/gaupalam-vedic/GV-5.jpg" alt="" class="w-100">
                 </div>
                 <div class="col-sm-6 p-0">
                     <img src="image/case-study/gaupalam-vedic/GV-6.jpg" alt="" class="w-100">
-                </div>
-                <div class="col-sm-6 p-0">
-                    <img src="image/case-study/gaupalam-vedic/GV-7.jpg" alt="" class="w-100">
                 </div>
             </div>
         </section>
@@ -169,7 +159,7 @@
                     <div class="row align-items-center">
                         <div class="col-6 p-0">
                             <div class="casw-text-left">
-                                <h4 class="m-0">Website Building</h4>
+                                <h4 class="m-0">Average Lead Conversion Cost reduced by 70%</h4>
                             </div>
                         </div>
                         <div class="col-6 p-0 d-flex justify-content-end">
