--- a/wahe-vibes-case-study.html
+++ b/wahe-vibes-case-study.html
@@ -89,7 +89,7 @@
             <div class="container-xxl">
                 <div class="row">
                     <div class="col-12 mb-3">
-                        <h4>Brand Identity</h4>
+                        <h4>Design and Development of Shopify Website</h4>
                     </div>
                 </div>
             </div>
@@ -111,18 +111,36 @@
                 </div>
             </div>
         </div>
+        <div class="">
+            <img src="image/case-study/swm/case-hero-1.png" alt="" class="w-100">
+        </div>
 
-        <!-- Case Study Extra Images Section Start -->
-        <section>
-            <div class="row p-0">
-                <div class="col-12 p-0"><img src="image/case-study/swm/case-hero-2.jpg" alt="" class="w-100"></div>
-                <div class="col-md-4 p-0"><img src="image/case-study/swm/case-hero-3-s.jpg" alt="" class="w-100"></div>
-                <div class="col-md-4 p-0"><img src="image/case-study/swm/case-hero-3-m.jpg" alt="" class="w-100"></div>
-                <div class="col-md-4 p-0"><img src="image/case-study/swm/case-hero-3-e.jpg" alt="" class="w-100"></div>
+         <!-- Case Study Website Building Section Start -->
+         <section class="case-study-website">
+            <div class="container-xxl">
+                <div class="casw-text">
+                    <div class="row align-items-center">
+                        <div class="col-6 p-0">
+                            <div class="casw-text-left">
+                                <h4 class="m-0">Website Building</h4>
+                            </div>
+                        </div>
+                        <div class="col-6 p-0 d-flex justify-content-end">
+                            <div class="casw-text-right">
+                                <a href="https://wahevibes.com/" target="_blank" class="th-arrow-btn">
+                                    <span class="btn-text">View Project</span>
+                                    <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="casw-video my-4">
+                <video src="image/case-study/mrw/2.mp4" autoplay loop muted class="w-100"></video>
             </div>
         </section>
-        <!-- Case Study Extra Images Section End -->
-
+        <!-- Case Study Website Building Section End -->
 
         <!-- Case Study Project Slider Section Start -->
         <section class="case-study-project">
