--- a/dimple-collection-case-study.html
+++ b/dimple-collection-case-study.html
@@ -100,42 +100,18 @@
             <div class="container-xxl">
                 <div class="row">
                     <div class="col-12 mb-3">
-                        <h4>Brand Identity</h4>
+                        <h4>5 million + views </h4>
                     </div>
                 </div>
-            </div>
-            <div class="">
-                <img src="image/case-study/dimple-collection/case-study-1.png" alt="" class="w-100">
             </div>
         </section>
         <!-- Case Study brand Section End -->
-        <!-- Case Study visual-identity Section Start -->
-        <section class="case-visual-identity">
-            <div class="container-xxl">
-                <div class="row justify-content-between">
-                    <div class="col-sm-8 col-md-6 col-lg-4 d-flex gap-2 gap-md-4 align-items-center">
-                        <div class="cavi-img"><img src="image/main-arrow.png" alt=""></div>
-                        <div class="">
-                            <h4 class="m-0">
-                                Distinctive Visual
-                                <span class="red">Identity</span>
-                            </h4>
-                        </div>
-                    </div>
-                    <div class="col-md-6 mt-3 mt-md-0">
-                        <p class="m-0">From logo design to font choices, every element of our website's visual identity
-                            is meticulously crafted to maintain consistency with the 'Money Heist' brand, ensuring a
-                            cohesive and impactful user experience.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Case Study visual-identity Section End -->
 
         <!-- Case Study Extra Images Section Start -->
         <section>
             <div class="row p-0">
-                <div class="col-12 p-0"><img src="image/case-study/dimple-collection/case-study-2.png" alt="" class="w-100"></div>
+                <div class="col-sm-6 p-0"><img src="image/case-study/dimple-collection/case-study-1.png" alt="" class="w-100"></div>
+                <div class="col-sm-6 p-0"><img src="image/case-study/dimple-collection/case-study-2.png" alt="" class="w-100"></div>
             </div>
         </section>
         <!-- Case Study Extra Images Section End -->
@@ -163,32 +139,6 @@
             </div>
             <div class="casw-video my-4">
                 <video src="image/case-study/dimple-collection/2.mp4" autoplay loop muted class="w-100"></video>
-            </div>
-            <div class="container-xxl">
-                <div class="casw-text-bottom p-md-4">
-                    <div class="row justify-content-between align-items-center">
-                        <div class="col-md-7">
-                            <h3 class="m-md-0">Audience-Centric Design</h3>
-                        </div>
-                        <div class="col-md-5 col-lg-4">
-                            <p class="m-md-0">We created a website inspired by the Spanish Netflix hit series, tailored to
-                                engage our target audience of Gen Z teenagers to young professionals.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container-xxl">
-                <div class="casw-text-bottom p-md-4">
-                    <div class="row justify-content-between align-items-center">
-                        <div class="col-md-7">
-                            <h3 class="m-md-0">Interactive Features</h3>
-                        </div>
-                        <div class="col-md-5 col-lg-4">
-                            <p class="m-md-0">We created a website inspired by the Spanish Netflix hit series, tailored to
-                                engage our target audience of Gen Z teenagers to young professionals.</p>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
         <!-- Case Study Website Building Section End -->
