--- a/dr-mps-case-study.html
+++ b/dr-mps-case-study.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dr.MPS group of institutions, Agra | MediaX - Creative Growth Agency</title>
+    <title>Dr. MPS group of institutions, Agra | MediaX - Creative Growth Agency</title>
     <!-- Website Icon  -->
     <link rel="Icon" href="image/">
 
@@ -30,7 +30,7 @@
 
 </head>
 
-<body id="case-study-pages">
+<body id="case-study-pages" class="dr-mps-col">
 
     <!-- Header Section Start -->
     <header id="header">
@@ -78,7 +78,10 @@
                     </div>
                     <div class="col-md-9">
                         <p>
-                            This project focused on a comprehensive rebranding and digital overhaul for Dr. MPS Group of Institutions, a renowned business studies college in Agra. This included a complete redesign of their website and the implementation of strategic marketing initiatives to enhance their visibility and appeal.
+                            This project focused on a comprehensive rebranding and digital overhaul for Dr. MPS Group of
+                            Institutions, a renowned business studies college in Agra. This included a complete redesign
+                            of their website and the implementation of strategic marketing initiatives to enhance their
+                            visibility and appeal.
                         </p>
                     </div>
                 </div>
@@ -86,53 +89,96 @@
         </section>
         <!-- Case Study About Section End -->
 
-        <!-- Case Study brand Section Start -->
-        <section class="case-brand">
-            <div class="container-xxl">
-                <div class="row">
-                    <div class="col-12 mb-3">
-                        <h4>Brand Identity</h4>
-                    </div>
-                </div>
-            </div>
-            <div class="">
-                <img src="image/case-study/swm/case-hero-1.png" alt="" class="w-100">
-            </div>
-        </section>
-        <!-- Case Study brand Section End -->
         <!-- Case Study visual-identity Section Start -->
         <section class="case-visual-identity">
             <div class="container-xxl">
-                <div class="row justify-content-between">
-                    <div class="col-sm-8 col-md-6 col-lg-4 d-flex gap-2 gap-md-4 align-items-center">
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-sm-8 col-md-4 col-xl-3 d-flex gap-2 gap-md-4 align-items-center">
                         <div class="cavi-img"><img src="image/main-arrow.png" alt=""></div>
                         <div class="">
                             <h4 class="m-0">
-                                Distinctive Visual
-                                <span class="red">Identity</span>
+                                Brand Identity
+                                <span class="red">Redesign</span>
                             </h4>
                         </div>
                     </div>
-                    <div class="col-md-6 mt-3 mt-md-0">
-                        <p class="m-0">From logo design to font choices, every element of our website's visual identity
-                            is meticulously crafted to maintain consistency with the 'Money Heist' brand, ensuring a
-                            cohesive and impactful user experience.</p>
+                    <div class="col-md-5 mt-3 mt-md-0">
+                        <p class="m-0">
+                            <ul>
+                                <li>Developed a modern and cohesive logo.</li>
+                                <li>Established a consistent color palette and typography.</li>
+                                <li>Created updated marketing materials including brochures, banners, and stationery.</li>
+                            </ul>
+                        </p>
                     </div>
+                </div>
+            </div>
+            <div class="row p-0">
+                <div class="col-12 p-0">
+                    <img src="image/case-study/swm/case-hero-2.jpg" alt="" class="w-100 mt-4">
+                </div>
+            </div>
+        </section>
+        <section class="case-visual-identity">
+            <div class="container-xxl">
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-sm-8 col-md-4 col-xl-3 d-flex gap-2 gap-md-4 align-items-center">
+                        <div class="cavi-img"><img src="image/main-arrow.png" alt=""></div>
+                        <div class="">
+                            <h4 class="m-0">
+                                Website
+                                <span class="red">Redesign</span>
+                            </h4>
+                        </div>
+                    </div>
+                    <div class="col-md-5 mt-3 mt-md-0">
+                        <p class="m-0">
+                            <ul>
+                               <li>Redesigned the existing website to be more user-friendly and visually appealing.</li>
+                               <li>Implemented responsive design for better accessibility on various devices.</li>
+                               <li>Enhanced website features, including online admission forms, course details, and faculty profiles.</li>
+                               <li>Improved SEO to boost online visibility and search engine ranking.</li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row p-0">
+                <div class="col-12 p-0">
+                    <img src="image/case-study/swm/case-hero-2.jpg" alt="" class="w-100 mt-4">
+                </div>
+            </div>
+        </section>
+        <section class="case-visual-identity">
+            <div class="container-xxl">
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-sm-8 col-md-4 col-xl-3 d-flex gap-2 gap-md-4 align-items-center">
+                        <div class="cavi-img"><img src="image/main-arrow.png" alt=""></div>
+                        <div class="">
+                            <h4 class="m-0">
+                                Creatives and 
+                                <span class="red">Marketing</span>
+                            </h4>
+                        </div>
+                    </div>
+                    <div class="col-md-5 mt-3 mt-md-0">
+                        <p class="m-0">
+                            <ul>
+                              <li>Produced engaging content for social media platforms and digital marketing campaigns.</li>
+                              <li>Launched targeted marketing strategies to attract and engage prospective students.</li>
+                              <li>Conducted a promotional campaign to highlight the institution’s strengths and unique offerings.</li>
+                            </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="row p-0">
+                <div class="col-12 p-0">
+                    <img src="image/case-study/swm/case-hero-2.jpg" alt="" class="w-100 mt-4">
                 </div>
             </div>
         </section>
         <!-- Case Study visual-identity Section End -->
-
-        <!-- Case Study Extra Images Section Start -->
-        <section>
-            <div class="row p-0">
-                <div class="col-12 p-0"><img src="image/case-study/swm/case-hero-2.jpg" alt="" class="w-100"></div>
-                <div class="col-md-4 p-0"><img src="image/case-study/swm/case-hero-3-s.jpg" alt="" class="w-100"></div>
-                <div class="col-md-4 p-0"><img src="image/case-study/swm/case-hero-3-m.jpg" alt="" class="w-100"></div>
-                <div class="col-md-4 p-0"><img src="image/case-study/swm/case-hero-3-e.jpg" alt="" class="w-100"></div>
-            </div>
-        </section>
-        <!-- Case Study Extra Images Section End -->
 
         <!-- Case Study Website Building Section Start -->
         <section class="case-study-website">
@@ -146,7 +192,7 @@
                         </div>
                         <div class="col-6 p-0 d-flex justify-content-end">
                             <div class="casw-text-right">
-                                <a href="https://spanishwithmrityunjay.in/" class="th-arrow-btn">
+                                <a href="#" class="th-arrow-btn">
                                     <span class="btn-text">View Project</span>
                                     <span class="btn-arrow"><img src="image/main-arrow.png" alt=""></span>
                                 </a>
@@ -157,32 +203,6 @@
             </div>
             <div class="casw-video my-4">
                 <video src="image/case-study/swm/case-hero-4.mp4" autoplay loop muted class="w-100"></video>
-            </div>
-            <div class="container-xxl">
-                <div class="casw-text-bottom p-md-4">
-                    <div class="row justify-content-between align-items-center">
-                        <div class="col-md-7">
-                            <h3 class="m-md-0">Audience-Centric Design</h3>
-                        </div>
-                        <div class="col-md-5 col-lg-4">
-                            <p class="m-md-0">We created a website inspired by the Spanish Netflix hit series, tailored to
-                                engage our target audience of Gen Z teenagers to young professionals.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container-xxl">
-                <div class="casw-text-bottom p-md-4">
-                    <div class="row justify-content-between align-items-center">
-                        <div class="col-md-7">
-                            <h3 class="m-md-0">Interactive Features</h3>
-                        </div>
-                        <div class="col-md-5 col-lg-4">
-                            <p class="m-md-0">We created a website inspired by the Spanish Netflix hit series, tailored to
-                                engage our target audience of Gen Z teenagers to young professionals.</p>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
         <!-- Case Study Website Building Section End -->
@@ -196,17 +216,25 @@
                     </div>
                     <div class="col-sm-6 mb-sm-3 d-flex justify-content-sm-end">
                         <div class="">
-                            <a href="#" class="text-decoration-underline"><p>Go Back to Project</p></a>
+                            <a href="#" class="text-decoration-underline">
+                                <p>Go Back to Project</p>
+                            </a>
                         </div>
                     </div>
                     <div class="col-md-12 p-0">
                         <div class="casp-slider">
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-1.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-2.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-3.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-1.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-2.jpg" alt="" class="w-100"></a></div>
-                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-3.jpg" alt="" class="w-100"></a></div>
+                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-1.jpg" alt=""
+                                        class="w-100"></a></div>
+                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-2.jpg" alt=""
+                                        class="w-100"></a></div>
+                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-3.jpg" alt=""
+                                        class="w-100"></a></div>
+                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-1.jpg" alt=""
+                                        class="w-100"></a></div>
+                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-2.jpg" alt=""
+                                        class="w-100"></a></div>
+                            <div class="casp-slider-item px-3"><a href="#" class=""><img src="image/casp-3.jpg" alt=""
+                                        class="w-100"></a></div>
                         </div>
                     </div>
                 </div>
@@ -245,7 +273,7 @@
     <!-- ========== main Js ========== -->
     <script src="js/main.js"></script>
     <script>
-        
+
     </script>
 </body>
 
