--- a/mia-by-tanishq-case-study.html
+++ b/mia-by-tanishq-case-study.html
@@ -93,20 +93,6 @@
         </section>
         <!-- Case Study About Section End -->
 
-        <!-- Case Study brand Section Start -->
-        <!-- <secti on class="case-brand">
-            <div class="container-xxl">
-                <div class="row">
-                    <div class="col-12 mb-3">
-                        <h4>Brand Identity</h4>
-                    </div>
-                </div>
-            </div>
-            <div class="">
-                <img src="image/case-study/swm/case-hero-1.png" alt="" class="w-100">
-            </div>
-        </secti> -->
-        <!-- Case Study brand Section End -->
         <!-- Case Study visual-identity Section Start -->
         <section class="case-visual-identity">
             <div class="container-xxl">
@@ -121,24 +107,16 @@
                         </div>
                     </div>
                     <div class="col-md-6 mt-3 mt-md-0">
-                        <p class="m-0">A total of 46,839 actions were taken which includes likes, comments, tap-links,
-                            saves, shares etc.</p>
+                        <p class="m-0">
+                            A total of 46,839 actions were taken which includes likes, comments, tap-links,
+                            saves, shares etc.
+                        </p>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Case Study visual-identity Section End -->
 
-        <!-- Case Study Extra Images Section Start -->
-        <!-- <section>
-            <div class="row p-0">
-                <div class="col-12 p-0"><img src="image/case-study/swm/case-hero-2.jpg" alt="" class="w-100"></div>
-                <div class="col-md-4 p-0"><img src="image/case-study/swm/case-hero-3-s.jpg" alt="" class="w-100"></div>
-                <div class="col-md-4 p-0"><img src="image/case-study/swm/case-hero-3-m.jpg" alt="" class="w-100"></div>
-                <div class="col-md-4 p-0"><img src="image/case-study/swm/case-hero-3-e.jpg" alt="" class="w-100"></div>
-            </div>
-        </section> -->
-        <!-- Case Study Extra Images Section End -->
 
         <!-- Case Study Website Building Section Start -->
         <section class="case-study-website">
@@ -164,32 +142,6 @@
             <div class="casw-video my-4">
                 <video src="image/case-study/mia/case-hero.mp4" autoplay loop muted class="w-100"></video>
             </div>
-            <!-- <div class="container-xxl">
-                <div class="casw-text-bottom p-md-4">
-                    <div class="row justify-content-between align-items-center">
-                        <div class="col-md-7">
-                            <h3 class="m-md-0">Audience-Centric Design</h3>
-                        </div>
-                        <div class="col-md-5 col-lg-4">
-                            <p class="m-md-0">We created a website inspired by the Spanish Netflix hit series, tailored to
-                                engage our target audience of Gen Z teenagers to young professionals.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="container-xxl">
-                <div class="casw-text-bottom p-md-4">
-                    <div class="row justify-content-between align-items-center">
-                        <div class="col-md-7">
-                            <h3 class="m-md-0">Interactive Features</h3>
-                        </div>
-                        <div class="col-md-5 col-lg-4">
-                            <p class="m-md-0">We created a website inspired by the Spanish Netflix hit series, tailored to
-                                engage our target audience of Gen Z teenagers to young professionals.</p>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
         </section>
         <!-- Case Study Website Building Section End -->
 
